feat: add "Error response"
