# docs/swagger.yaml
@@ -18,6 +18,7 @@ definitions:
         example: "+886955555555"
         type: string
       userName:
+        description: 使用者名稱
         example: Jeff
         maxLength: 20
         minLength: 4
@@ -63,6 +64,21 @@ definitions:
         type: string
       userName:
         example: Jeff
+        type: string
+    type: object
+  respdto.ApiErrorResp:
+    properties:
+      Error:
+        additionalProperties: true
+        description: 內部標示符 -> 對應到內部error的相關info
+        type: object
+      detail:
+        description: 問題描述
+        type: string
+      title:
+        description: |-
+          Type     string `json:"type,omitempty"`
+          Status   int    `json:"status,omitempty"`   // http status
         type: string
     type: object
 info:
@@ -115,9 +131,13 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: pong
           schema:
             type: string
+        default:
+          description: error response
+          schema:
+            $ref: '#/definitions/respdto.ApiErrorResp'
       summary: Ping Server
       tags:
       - Example
